Fixed grid overflow

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-div{
-}
+
 html, body {
     height: 100%;
     margin: 0; /* Resets default margin */
@@ -7,12 +6,7 @@ html, body {
 body{
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
-}
-.layout{
-    flex: 1;
-    display: flex;
-    background-color: rgb(178, 165, 155);
-    height: 100%;
+    
 }
 .sidebar{
     flex: 1;
@@ -20,7 +14,6 @@ body{
     flex-direction: column;
     background-color: rgb(96, 114, 116);
     height: 100%;
-
 }
 .user-menu div,
 .settings-menu div{
@@ -59,6 +52,7 @@ body{
     flex: 4;
     display: flex;
     flex-direction: column;
+    max-height: 100vh;
 }
 .first-row{
     flex: 1;
@@ -146,6 +140,8 @@ form{
     grid-template-rows: 1fr 1fr;
     gap: 15px;
     background-color: wheat;
+    font-size: 1em;
+    overflow: auto;
 }
 #your-projects-text{
     margin-left: 5px;
